# cpp-utils

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.cpp  config.h  gp-predict.cpp  gp-predict.h  kernels.cpp  kernels.h  polyregression.cpp  polyregression.h
.github/workflows/: ci.yml
cmake/: cpp_ml_toolsConfig.cmake.in
examples/: CMakeLists.txt  composite_kernel_example.cpp  gp_usage.cpp  polyregression_usage.cpp  sklearn_export.py
tests/: CMakeLists.txt  config_test.cpp  generate_test_data.py  gp_test.cpp  kernels_test.cpp  polyregression_test.cpp
